--- a/Django/Dockerfile
+++ b/Django/Dockerfile
@@ -1,5 +1,15 @@
-# ----- Stclear
+# ----- Stage 1: Build das dependências -----
+FROM python:3.11-slim AS builder
 
+WORKDIR /app
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+COPY requirements.txt .
+
+RUN pip install --upgrade pip \
+ && pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
 
 # ----- Stage 2: Imagem final -----
 FROM python:3.11-slim
@@ -15,7 +25,7 @@ COPY . .
 
 RUN pip install gunicorn
 
-# Coleta dos estÃ¡ticos
+# Coleta dos estáticos
 RUN python manage.py collectstatic --no-input
 
 CMD ["gunicorn", "GerOndApp.wsgi:application", "--bind", "0.0.0.0:8000"]
