--- a/Django/docker-compose.yml
+++ b/Django/docker-compose.yml
@@ -3,11 +3,10 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    #command: gunicorn GerOndApp.wsgi:application --bind 0.0.0.0:8000
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn GerOndApp.wsgi:application --bind 0.0.0.0:8000
 
     volumes:
-      - ./staticfiles:/app/staticfiles
+      - ./staticfiles:/django/staticfiles
     ports:
       - "53900:8000"
     env_file:
