--- a/Django/requirements.txt
+++ b/Django/requirements.txt
@@ -12,6 +12,7 @@ django-environ==0.12.0
 djangorestframework==3.16.0
 executing==2.2.0
 fonttools==4.56.0
+gunicorn==23.0.0
 ipykernel==6.29.5
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
