Refazendo o primeiro Release pois o anterior não conseguiu ter o deploy feito, o problema em questão foi a falta do comando migrate dentro do container, migrações como sessões e informações de admin do django necessitam do migrate para rodar bem, o erro estava ocasionando o erro 502, impossibilitando a comunicação entre o NGINX e o gunicorn

--- a/Django/docker-compose.yml
+++ b/Django/docker-compose.yml
@@ -3,8 +3,9 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    command: gunicorn GerOndApp.wsgi:application --bind 0.0.0.0:8000
-
+    command: >
+      sh -c "python manage.py migrate &&
+             gunicorn GerOndApp.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - ./staticfiles:/django/staticfiles
     ports:
@@ -12,3 +13,5 @@ services:
     env_file:
       - dotenvfiles/.env
     restart: unless-stopped
+volumes:
+  staticfiles:
