--- a/Django/Dockerfile
+++ b/Django/Dockerfile
@@ -23,6 +23,9 @@ RUN pip install --no-cache /wheels/*
 
 COPY . .
 
-RUN python manage.py collectstatic --no-input
+RUN python manage.py collectstatic --noinput
+
+EXPOSE 8000
+
 
 CMD ["gunicorn", "GerOndApp.wsgi:application", "--bind", "0.0.0.0:8000"]
